feat: Implementar sistema RadiologyAI completo com deploy Docker/Railway
- Adicionar página de upload com drag & drop de radiografias
- Implementar análise de radiografias com IA
- Criar histórico de análises com filtros e busca
- Gerar relatórios PDF profissionais com jsPDF
- Adicionar modal de disclaimer sobre uso de IA
- Melhorar header com navegação moderna e botão Sobre
- Configurar deploy Docker/Railway com Nginx
- Integrar API de detecção de fraturas
- Adicionar documentação completa (README.md e DEPLOY.md)
- Configurar build otimizado para produção

--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "docker:build": "docker build -t radio-app .",
+    "docker:run": "docker run -p 8080:8080 radio-app"
   },
   "prettier": {
     "printWidth": 100,
@@ -29,7 +32,11 @@
     "@angular/forms": "^21.0.0",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
+    "@tailwindcss/postcss": "^4.1.18",
+    "jspdf": "^3.0.4",
+    "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.18",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
